feat: add get all category and category by id functionality
